pre-test logic complete

--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
 	<!-- Main container -->
 	<div class="container-fluid">
 
+		<div class="row text-center" id="title">
+			<h1>Trivia!</h1>
+		</div>
+
+		<!-- Main game section -->
+		<div id="main">
+			<button type="button" class="btn btn-primary btn-lg center-block">Large button</button>
+		</div>
+		<!-- /Main game section -->
+
+
 	</div>
 	<!-- /Main container -->
 	<!-- My JS --><script type="text/javascript" src="Assets/javascript/game.js"></script>
