--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<!-- Main game section -->
 		<div id="main">
-			<button type="button" class="btn btn-primary btn-lg center-block">Large button</button>
+			<button type="button" class="btn btn-primary btn-lg center-block">Start game</button>
 		</div>
 		<!-- /Main game section -->
 
